# todo

./: .gitignore  README.md  database.db  pyproject.toml
tests/: conftest.py  test_main.py  test_models.py
todo/: main.py  models.py  schemas.py
